--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ExercicioCozinha.jar
+dist.jar=${dist.dir}/AtividadeCozinha.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ExercicioCozinha
+dist.jlink.output=${dist.jlink.dir}/AtividadeCozinha
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ExercicioCozinha
-main.class=exerciciocozinha.ExercicioCozinha
+jlink.launcher.name=AtividadeCozinha
+main.class=br.com.daniel.atividadecozinha.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
